--- a/readme.org
+++ b/readme.org
@@ -18,16 +18,16 @@ Here is the sample script that I used for emacs installation in Mac OS X.
 
 
 And additional version infromation which would be usable to reproduce my time-tested working emacs environment.
-#+BEGIN_SRC emacs-lisp
-  (format "Version: %s\nOptions: %s"
-  		(version)
-  		system-configuration-options)
+#+BEGIN_SRC emacs-lisp :wrap example
+  (format "Version: %s\nOptions: %s" (version) system-configuration-options)
 #+END_SRC
 
 #+RESULTS:
-: Version: GNU Emacs 29.1 (build 1, aarch64-apple-darwin22.5.0, Carbon Version 169 AppKit 2299.6)
-:  of 2023-08-09
-: Options: --with-mac --enable-locallisppath=/usr/local/share/emacs/site-lisp:/opt/homebrew/share/emacs/site-lisp --enable-mac-app=/Users/admin/homebrew-emacsmacport/build-scripts/build_out/tmproot --prefix=/Users/admin/homebrew-emacsmacport/build-scripts/build_out/tmproot --enable-mac-self-contained --with-modules --with-xwidgets --with-tree-sitter --without-lcms2 --without-webp
+#+begin_example
+Version: GNU Emacs 29.1 (build 1, aarch64-apple-darwin22.5.0, Carbon Version 169 AppKit 2299.6)
+ of 2023-08-09
+Options: --with-mac --enable-locallisppath=/usr/local/share/emacs/site-lisp:/opt/homebrew/share/emacs/site-lisp --enable-mac-app=/Users/admin/homebrew-emacsmacport/build-scripts/build_out/tmproot --prefix=/Users/admin/homebrew-emacsmacport/build-scripts/build_out/tmproot --enable-mac-self-contained --with-modules --with-xwidgets --with-tree-sitter --without-lcms2 --without-webp
+#+end_example
 
 * TODO Move my configuration files in seperated directory
 Manually isolating auxiliary files and directories in ~.emacs.d~ seems not robust, I've tried to change the ~user-emacs-directory~ on ~early-init.el~ but still ~auto-save~ related things remains at ~.emacs.d~.
